src/test/ui/error-codes/E0268.stderr
error[E0268]: `break` outside of a loop
  --> $DIR/E0268.rs:2:5
   |
LL |     break;
   |     ^^^^^ cannot `break` outside of a loop

error: aborting due to previous error

For more information about this error, try `dustc --explain E0268`.
